graphical changes in web and cross-validation in app

--- a/web/templates/layouts/layout1.html
+++ b/web/templates/layouts/layout1.html
@@ -57,5 +57,6 @@
     <script src="/static/js/contact_me.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="/static/js/freelancer.js"></script>
+    <script src='/static/js/Chart.min.js'></script>
 </body>
 </html>
