Connect web with model and improve UI

--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -20,8 +20,8 @@ Project VMM
 <!-- Portfolio Grid Section -->
 <section id="portfolio">
     <div class="container">
-        <div class="row">
-                  <p>Filename: {{filename}}</p>
+        <div class="row text-center" >
+                  <p >Your file has "{{filename}}" genre.</p>
         </div>
 
         <div class="row" >
