refactoring and finalize report

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,6 +1,6 @@
 ﻿{% extends "layouts/layout1.html" %}
 {% block title %}
-Project VMM
+Klasifikace hudebního žánru
 {% endblock %}
 {% block content %}
     <!-- Header -->
@@ -9,9 +9,9 @@ Project VMM
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-text">
-                    <span class="name">Project VMM</span>
+                    <span class="name">Klasifikace hudebního žánru</span>
                     <hr class="star-light">
-                    <span class="skills">Similarity music genres retrieval</span>
+                    <span class="skills">Projekt VMM</span>
                 </div>
             </div>
         </div>
@@ -22,7 +22,7 @@ Project VMM
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Choose a file</h2>
+                <h2>Vyberte soubor</h2>
                 <hr class="star-primary">
             </div>
         </div>
@@ -44,7 +44,7 @@ Project VMM
                 <form action="" method=post enctype=multipart/form-data style="margin:0 auto;">
                     <label class="btn btn-default btn-file "> <input type=file name=file> </label>
                     <p></p>  
-                    <input class="btn btn-default btn-file" type=submit value=Upload >
+                    <input class="btn btn-default btn-file" type=submit value=Nahrát >
                 </form>
             </div>
             <div class="col-sm-1 portfolio-item"></div>
