--- a/web/templates/layouts/layout1.html
+++ b/web/templates/layouts/layout1.html
@@ -34,7 +34,7 @@
                     <div class="footer-col col-md-4">
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Us</h3>
+                        <h3>Autoři</h3>
                         <p>Petr Lorenc</p>
                         <p>Oleksandra Liutova</p>
                     </div>
