--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -1,6 +1,6 @@
 ﻿{% extends "layouts/layout1.html" %}
 {% block title %}
-Project VMM
+Klasifikace hudebního žánru - výsledek
 {% endblock %}
 {% block content %}
     <!-- Header -->
@@ -9,9 +9,9 @@ Project VMM
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-text">
-                    <span class="name">Project VMM</span>
+                    <span class="name">Klasifikace hudebního žánru</span>
                     <hr class="star-light">
-                    <span class="skills">Similarity music genres retrieval</span>
+                    <span class="skills">Projekt VMM</span>
                 </div>
             </div>
         </div>
@@ -21,7 +21,7 @@ Project VMM
 <section id="portfolio">
     <div class="container">
         <div class="row text-center" >
-                  <p >Your file has "{{filename}}" genre.</p>
+                  <p >Váš soubor "{{filename}}" byl klasifikován jako "{{genre}}"</p>
         </div>
 
         <div class="row" >
